[First Login Screen][IBM Library] First login screen with a stock image. IBM Library has been added to the manifest and build files along with the jars.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-
     compile project(':libraries:FacebookSDK')
+
+    compile files(':libraries:ibm_bluemix:ibmbluemix.jar')
+    compile files(':libraries:ibm_bluemix:ibmcloudcode.jar')
+    compile files(':libraries:ibm_bluemix:ibmdata.jar')
+    compile files(':libraries:ibm_bluemix:ibmfilesync.jar')
+
 }
